--- a/gradle.properties
+++ b/gradle.properties
@@ -4,5 +4,7 @@ org.gradle.jvmargs=-Xmx3G
 mc_version=1.12.2
 mc_major_version=1.12
 jei_version=4.8.5.138
-ccl_version=3.1.5.+
+codechickenlib_version=3.1.7.+
 one_probe_version=1.4.19-11
+redstone_flux_version=2.0.2.3
+tinkers_construct_version=2.9.1.65
