--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,10 @@
 # Sets default memory used for gradle commands. Can be overridden by user or command line properties.
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
-mc_version=1.12.2
-mc_major_version=1.12
-forge_version=14.23.5.2816
-jei_version=4.8.5.138
+org.gradle.daemon=false
+mc_version=1.15.2
+staticpower_version=3.0.0.0
+jei_version=6.0.0.4
 codechickenlib_version=3.2.3.+
 one_probe_version=1.4.28-17
 redstone_flux_version=2.1.0.7
