Added burnder miner with drills. Added some additional dusts and textures and recipes. Need to implement drill bits.

--- a/src/main/resources/data/staticpower/recipes/grinding/sapphire_ore.json
+++ b/src/main/resources/data/staticpower/recipes/grinding/sapphire_ore.json
@@ -12,6 +12,11 @@
 			"item": "staticpower:gem_sapphire",
 			"count": 1,
 			"chance": 0.25
+		},
+		{
+			"item": "staticpower:dust_sapphire",
+			"count": 1,
+			"chance": 0.1
 		}
 	]
 }
