--- a/gradle.properties
+++ b/gradle.properties
@@ -8,3 +8,4 @@ staticpower_version=3.0.0.0
 jei_version=6.0.0.4
 codechickenlib_version=3.3.0.+
 one_probe_version=2.0.2-4
+patchouli_version=1.2-35.2
