Making great 1.16.3 progress! Now need to include matrix stacks in all GUI rendering methods.

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,2 +1,11 @@
 # Thank you AppliedEnergistics2 (https://github.com/AppliedEnergistics/Applied-Energistics-2/blob/master/src/main/resources/META-INF/accesstransformer.cfg)
 protected net.minecraft.client.gui.screen.inventory.ContainerScreen func_238746_a_(Lcom/mojang/blaze3d/matrix/MatrixStack;Lnet/minecraft/inventory/container/Slot;)V # moveItems
+
+protected net.minecraft.inventory.container.Container field_75149_d # listeners
+
+protected net.minecraft.network.play.server.SSetSlotPacket field_149179_a # windowId
+protected net.minecraft.network.play.server.SSetSlotPacket field_149177_b # slot
+protected net.minecraft.network.play.server.SSetSlotPacket field_149178_c # itemstack
+
+protected net.minecraft.network.play.server.SWindowItemsPacket field_148914_a # windowId
+protected net.minecraft.network.play.server.SWindowItemsPacket field_148913_b # itemstacks
