Updated tab system to use matrix stacks

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -9,3 +9,6 @@ protected net.minecraft.network.play.server.SSetSlotPacket field_149178_c # item
 
 protected net.minecraft.network.play.server.SWindowItemsPacket field_148914_a # windowId
 protected net.minecraft.network.play.server.SWindowItemsPacket field_148913_b # itemstacks
+
+public-f net.minecraft.inventory.container.Slot field_75223_e # xPos
+public-f net.minecraft.inventory.container.Slot field_75221_f # yPos
