Added base multi harvest tool! Needs a lot of clean-up.

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -12,3 +12,7 @@ protected net.minecraft.network.play.server.SWindowItemsPacket field_148913_b # 
 
 public-f net.minecraft.inventory.container.Slot field_75223_e # xPos
 public-f net.minecraft.inventory.container.Slot field_75221_f # yPos
+
+# Thank you to TinkersConstruct (https://github.com/SlimeKnights/TinkersConstruct/blob/1.16/src/main/resources/META-INF/accesstransformer.cfg)
+public net.minecraft.client.renderer.WorldRenderer field_228415_m_ # renderTypeTextures
+public net.minecraft.client.renderer.WorldRenderer func_228429_a_(Lcom/mojang/blaze3d/matrix/MatrixStack;Lcom/mojang/blaze3d/vertex/IVertexBuilder;Lnet/minecraft/entity/Entity;DDDLnet/minecraft/util/math/BlockPos;Lnet/minecraft/block/BlockState;)V # drawSelectionBox
