Starting full server testing with the new features. Fixed a few bugs, should be beta-testable now.

--- a/server/server.properties
+++ b/server/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Sun Sep 27 22:28:29 EDT 2020
+#Mon Nov 02 02:41:04 EST 2020
 allow-flight=false
 allow-nether=true
 broadcast-console-to-ops=true
