Added attribute layers for chainsaw and implemented hardened attribute.

--- a/src/main/resources/data/staticpower/recipes/smithing/hardened_sapphire.json
+++ b/src/main/resources/data/staticpower/recipes/smithing/hardened_sapphire.json
@@ -1,7 +1,8 @@
 {
 	"type": "staticpower:auto_smith_recipe",
 	"modifier_item": {
-		"tag": "forge:dusts/sapphire"
+		"tag": "forge:dusts/sapphire",
+		"count": 3
 	},
 	"attributes": [
 		{
