--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,9 @@ minecraft {
             // Recommended logging level for the console
             property 'forge.logging.console.level', 'debug'
 
+			// Temp fix for patchouli.
+			properties 'mixin.env.disableRefMap': 'true'
+			
             mods {
                 examplemod {
                     source sourceSets.main
@@ -102,8 +105,8 @@ dependencies {
 	compileOnly fg.deobf("mcjty.theoneprobe:TheOneProbe-${mc_major_version}:${one_probe_version}:api")
     runtimeOnly fg.deobf("mcjty.theoneprobe:TheOneProbe-${mc_major_version}:${one_probe_version}")
 	
-	// compileOnly fg.deobf("vazkii.patchouli:Patchouli:${patchouli_version}:api")
-    // runtimeOnly fg.deobf("vazkii.patchouli:Patchouli:${patchouli_version}")
+	compileOnly fg.deobf("vazkii.patchouli:Patchouli:${patchouli_version}:api")
+    runtimeOnly fg.deobf("vazkii.patchouli:Patchouli:${patchouli_version}")
 }
 
 repositories {
