--- a/gradle.properties
+++ b/gradle.properties
@@ -10,3 +10,4 @@ staticpower_core_version=1.0.0
 jei_version=7.6.0.58
 one_probe_version=1.16-3.0.4-beta-7
 patchouli_version=1.16.2-47
+hwyla_version=1.10.11-B78_1.16.2
