--- a/gradle.properties
+++ b/gradle.properties
@@ -4,9 +4,12 @@ org.gradle.jvmargs=-Xmx6G
 org.gradle.daemon=false
 mc_major_version=1.16
 mc_version=1.16.4
-staticpower_version=3.0.0
-staticpower_api_version=1.0.0
-staticpower_core_version=1.0.0
+staticpower_major_version=3
+staticpower_minor_version=0
+staticpower_api_major_version=1
+staticpower_api_minor_version=0
+staticpower_core_major_version=1
+staticpower_core_minor_version=0
 jei_version=7.6.0.58
 one_probe_version=1.16-3.0.4-beta-7
 patchouli_version=1.16.2-47
