--- a/build.gradle
+++ b/build.gradle
@@ -13,14 +13,14 @@ apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
 
-version = "${mc_version}-${staticpower_major_version}.${staticpower_minor_version}.${build_number}"
+version = "${mc_version}-${staticpower_major_version}.${staticpower_minor_version}" + project.getProperty("build_number")
 group = "com.theking530.staticpower" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "StaticPower"
 
 sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.8' // Need this here so eclipse task generates correctly.
 
-def apiVersion = "${mc_version}-${staticpower_api_major_version}.${staticpower_api_minor_version}.${build_number}"
-def coreVersion = "${mc_version}-${staticpower_core_major_version}.${staticpower_core_minor_version}.${build_number}"
+def apiVersion = "${mc_version}-${staticpower_api_major_version}.${staticpower_api_minor_version}." + project.getProperty("build_number")
+def coreVersion = "${mc_version}-${staticpower_core_major_version}.${staticpower_core_minor_version}." + project.getProperty("build_number")
 
 println('Java: ' + System.getProperty('java.version') + ' JVM: ' + System.getProperty('java.vm.version') + '(' + System.getProperty('java.vendor') + ') Arch: ' + System.getProperty('os.arch'))
 minecraft {
