Pushing some additional research

--- a/src/main/resources/data/staticpower/recipes/research/food/apple_pie.json
+++ b/src/main/resources/data/staticpower/recipes/research/food/apple_pie.json
@@ -6,11 +6,12 @@
 		"item": "staticpower:pie_apple"
 	},
 	"visualOffset": [
-		0,
+		-4,
 		0
 	],
+	"sortOrder": 40,
 	"prerequisites": [
-		"staticpower:research/farming/static_farming"
+		"staticpower:research/research_tiers/tier_1"
 	],
 	"requirements": [
 		{
