Moving over to deferred registry.

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,14 +3,15 @@
 org.gradle.jvmargs=-Xmx6G
 org.gradle.daemon=false
 mc_major_version=1.18
-mc_version=1.18.1
-forge_version=39.0.75
-staticpower_major_version=4
+mc_version=1.18.2
+parchment_version=2022.08.07-1.18.2
+forge_version=40.1.68
+staticpower_major_version=5
 staticpower_minor_version=0
-staticpower_api_major_version=2
+staticpower_api_major_version=3
 staticpower_api_minor_version=0
-staticpower_core_major_version=2
+staticpower_core_major_version=3
 staticpower_core_minor_version=0
-jei_version=9.2.3.85
-patchouli_version=65
-jade_version=3614180
+jei_version=9.7.1.232
+patchouli_version=71.1
+jade_version=3865918
