Started working on including SQLite productivity metrics. Lots of optimization to do on that front.

--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,11 @@ buildscript {
         classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
     }
 }
+
+plugins {
+    id 'com.github.johnrengelman.shadow' version '7.1.2'
+}
+
 apply plugin: 'net.minecraftforge.gradle'
 // Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
 apply plugin: 'eclipse'
@@ -100,6 +105,19 @@ minecraft {
     }
 }
 
+configurations {
+	// Create the library configuration, where our non-mod libraries will be added to
+	library
+	// Any dependency in the library configuration will also be added to the implementation configuration
+	implementation.extendsFrom library
+}
+
+minecraft.runs.all {
+	lazyToken('minecraft_classpath') {
+		configurations.library.copyRecursive().resolve().collect { it.absolutePath }.join(File.pathSeparator)
+	}
+}
+
 dependencies {
     // Specify the version of Minecraft to use, If this is any group other then 'net.minecraft' it is assumed
     // that the dep is a ForgeGradle 'patcher' dependency. And it's patches will be applied.
@@ -117,6 +135,11 @@ dependencies {
 	// Visit https://www.curseforge.com/minecraft/mc-mods/jade/files/all
     // to get the latest version
     implementation fg.deobf("curse.maven:jade-324717:${jade_version}")
+	
+	// SQL driver
+	library ('org.xerial:sqlite-jdbc:3.39.3.0') {
+        transitive = false
+    }
 }
 
 repositories {
@@ -148,44 +171,32 @@ repositories {
 	}
 }
 
-// Example for how to get properties into the manifest for reading by the runtime..
 jar {
+	archiveClassifier = 'slim'
     manifest {
         attributes([
-            "Specification-Title": "examplemod",
-            "Specification-Vendor": "examplemodsareus",
-            "Specification-Version": "1", // We are version 1 of ourselves
-            "Implementation-Title": project.name,
-            "Implementation-Version": "${version}",
-            "Implementation-Vendor" :"examplemodsareus",
-            "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
+			"Specification-Title"     : "staticpower",
+			"Specification-Vendor"    : "theking530",
+			"Specification-Version"   : "1", // We are version 1 of ourselves
+			"Implementation-Title"    : project.name,
+			"Implementation-Version"  : project.jar.archiveVersion,
+			"Implementation-Vendor"   : "theking530",
+			"Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
         ])
     }
 }
 
-task buildApiJar(type: Jar) {
-    baseName = archivesBaseName+'-'+apiVersion+'-api'
-
-    from zipTree(jar.outputs.getFiles().getSingleFile()).matching {
-        include 'theking530/api/**'
-    }
+shadowJar {
+   archiveFileName = jar.archiveFileName
+   configurations = [project.configurations.library]
+   relocate 'org.xerial:sqlite-jdbc', "${project.group}.relocated.sqlite-jdbc"
+   finalizedBy 'reobfShadowJar'
 }
 
-task buildCoreJar(type: Jar) {
-    baseName = archivesBaseName+'-'+coreVersion+'-api'
-
-    from zipTree(jar.outputs.getFiles().getSingleFile()).matching {
-        include 'theking530/staticcore/**'
-    }
-}
 
 task deobfJar(type: Jar, dependsOn: 'jar') {
     from "build/source/main"
     classifier "dev"
-}
-
-artifacts {
-    archives deobfJar
 }
 
 task sourcesJar(type: Jar, dependsOn: classes) {
@@ -194,27 +205,15 @@ task sourcesJar(type: Jar, dependsOn: classes) {
 }
 
 build.dependsOn sourcesJar
-buildApiJar.dependsOn sourcesJar
+jar.finalizedBy('reobfJar')
 
 artifacts {
+	archives deobfJar
 	archives sourcesJar
 }
 
-// Example configuration to allow publishing using the maven-publish task
-// This is the preferred method to reobfuscate your jar file
-jar.finalizedBy('reobfJar') 
-// However if you are in a multi-project build, dev time needs unobfed jar files, so you can delay the obfuscation until publishing by doing
-//publish.dependsOn('reobfJar')
-
-publishing {
-    publications {
-        mavenJava(MavenPublication) {
-            artifact jar
-        }
-    }
-    repositories {
-        maven {
-            url "file:///${project.projectDir}/mcmodsrepo"
-        }
-    }
+reobf {
+    shadowJar {}
 }
+
+jar.dependsOn("shadowJar")
