--- a/gradle.properties
+++ b/gradle.properties
@@ -4,15 +4,16 @@ org.gradle.jvmargs=-Xmx6G
 org.gradle.daemon=false
 mc_major_version=1.19
 mc_version=1.19.2
-forge_version=43.1.1
+forge_version=43.1.55
 staticpower_major_version=5
 staticpower_minor_version=0
-staticpower_api_major_version=3
+staticpower_api_major_version=5
 staticpower_api_minor_version=0
-staticpower_core_major_version=3
+staticpower_core_major_version=5
 staticpower_core_minor_version=0
 jei_version=11.2.0.246
 patchouli_version=76
 jade_version=4010505
 ccl_version=4.3.0.470
+top_version=6.2.0-6-api
 modid=staticpower
