StaticCore launches! Going to break that into KingLib and StaticCore next

--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ subprojects {
 
 	version = "${mc_version}-${mod_version}"
 	group = "theking530"
-	archivesBaseName = "StaticPower"
+	archivesBaseName = "TheKing530"
 	
     minecraft {
 		mappings channel: 'official', version: '1.19.2'
@@ -40,7 +40,7 @@ subprojects {
 				property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"
 				
 				mods {
-					staticpower {
+					mod {
 						source sourceSets.main
 					}
 				}
@@ -57,7 +57,7 @@ subprojects {
 				property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"
 				
 				mods {
-					staticpower {
+					mod {
 						source sourceSets.main
 					}
 				}
@@ -73,10 +73,10 @@ subprojects {
 				property 'mixin.env.remapRefMap', 'true'
 				property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"
 
-				args '--mod', 'staticpower', '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
+				args '--mod', "${project.name.toString().toLowerCase()}", '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
 
 				mods {
-					staticpower {
+					mod {
 						source sourceSets.main
 					}
 				}
@@ -122,11 +122,5 @@ subprojects {
 		implementation fg.deobf("codechicken:CodeChickenLib:${mc_version}-${ccl_version}:universal")
 		
 		compileOnly fg.deobf("curse.maven:the-one-probe-245211:3965693")
-	}
-}
-
-project('StaticCore') {
-	dependencies {
-	
 	}
 }
